--- a/src/Components/Styles/NavbarStyles.css
+++ b/src/Components/Styles/NavbarStyles.css
@@ -114,7 +114,7 @@ header {
     justify-content: space-around;
     align-items: center;
     background: midnightblue;
-    height: 12vh;
+    height: 13vh;
     color: white;
     position: fixed;
     top: 0;
@@ -224,8 +224,8 @@ ul li a.active
         display: none;
     }
 
-    ul li a,
-    a {
+    ul li a
+    {
         list-style: none;
         display: flex;
         color: #172739;
