--- a/src/Components/Styles/LoaderStyle.css
+++ b/src/Components/Styles/LoaderStyle.css
@@ -6,6 +6,21 @@ left: 36%; */
     padding-top: 19%;
 }
 
+.loaderModalDBL {
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .loaderHolder {
     display: flex;
     justify-content: center;
